package com.champlain.ateliermecaniquews.appointmentmanagementsubdomain.datalayer;

public enum Status {
    PENDING, CONFIRMED, COMPLETED, CANCELLED
}
